winter break 2023 edits

--- a/Notes/Week8/week8.tex
+++ b/Notes/Week8/week8.tex
@@ -361,7 +361,7 @@
             \draw [rex,semithick,shorten <=3pt,shorten >=2pt] (sb8a) to[bend right=60,looseness=1.5] (sb8b);
             \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb8c) to[bend right=90,looseness=3] (Cl8);
         }
-        \caption{Chlorination of an alcohol via the \ce{} mechanism.}
+        \caption{Chlorination of an alcohol via the \ce{SOCl2} mechanism.}
         \label{fig:SOCl2}
     \end{figure}
     \begin{itemize}
